--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"build": "esbuild ./src --bundle --outfile=./dist --minify --sourcemap",
+		"build": "esbuild ./src/Exchange.js --bundle --outfile=./dist/exchange.js --minify",
+		"dev": "esbuild ./src/Exchange.js --bundle --outfile=./dist/exchange.js --sourcemap --watch",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"author": "Kandreas9",
 	"license": "ISC",
 	"devDependencies": {
 		"esbuild": "^0.12.15"
+	},
+	"dependencies": {
+		"qrcode": "^1.4.4"
 	}
 }
