--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"esbuild": "^0.12.15"
 	},
 	"dependencies": {
-		"qrcode": "^1.4.4"
+		"qrcode": "^1.4.4",
+		"socket.io-client": "^4.1.3"
 	}
 }
